Fix submodules, update Fingear & Stave

--- a/Glyph.Audio/Glyph.Audio.csproj
+++ b/Glyph.Audio/Glyph.Audio.csproj
@@ -53,7 +53,7 @@
     <Compile Include="SoundCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Stave\Stave.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\Stave.csproj">
       <Project>{38A041E6-5AA9-4C22-B96F-35167F171959}</Project>
       <Name>Stave</Name>
     </ProjectReference>
