--- a/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
+++ b/Glyph.Graphics.Particles/Glyph.Graphics.Particles.csproj
@@ -39,19 +39,19 @@
     <Compile Include="StandardParticle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Diese\Diese.Injection\Diese.Injection.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
       <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
       <Name>Diese.Injection</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
       <Project>{0781ad0f-eb0f-442e-9a1c-34c2aa9319fd}</Project>
       <Name>Diese.Modelization</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
-      <Project>{F2F3FEB2-8453-409E-B00C-96DC64AC8020}</Project>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese\Diese.csproj">
+      <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
       <Name>Diese</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Stave\Stave.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\Stave.csproj">
       <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
       <Name>Stave</Name>
     </ProjectReference>
