--- a/Glyph.Messaging/Glyph.Messaging.csproj
+++ b/Glyph.Messaging/Glyph.Messaging.csproj
@@ -43,7 +43,7 @@
     <Compile Include="RouterBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Diese\Diese.Collections\Diese.Collections.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Collections\Diese.Collections.csproj">
       <Project>{8E354191-E8E5-498B-9C24-A6765DA86417}</Project>
       <Name>Diese.Collections</Name>
     </ProjectReference>
