--- a/Glyph.Physics/Glyph.Physics.csproj
+++ b/Glyph.Physics/Glyph.Physics.csproj
@@ -44,13 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColliderManager.cs" />
+    <Compile Include="Colliders\Base\ColliderParentHelper.cs" />
     <Compile Include="Colliders\CircleCollider.cs" />
-    <Compile Include="Colliders\ColliderBase.cs" />
+    <Compile Include="Colliders\Base\ColliderBase.cs" />
+    <Compile Include="Colliders\ColliderContainer.cs" />
     <Compile Include="Colliders\ColliderComposite.cs" />
     <Compile Include="Colliders\CollisionUtils.cs" />
     <Compile Include="Colliders\GridCollider.cs" />
     <Compile Include="Colliders\IGridCollider.cs" />
-    <Compile Include="Colliders\ShapeColliderBase.cs" />
+    <Compile Include="Colliders\Base\ShapeColliderBase.cs" />
     <Compile Include="Colliders\ICollider.cs" />
     <Compile Include="Colliders\RectangleCollider.cs" />
     <Compile Include="Collision.cs" />
@@ -58,16 +60,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Diese\Diese.Injection\Diese.Injection.csproj">
-      <Project>{6add41dc-f168-43c4-ad4e-f6b8218d8f7c}</Project>
-      <Name>Diese.Injection</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Diese\Diese\Diese.csproj">
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese\Diese.csproj">
       <Project>{f2f3feb2-8453-409e-b00c-96dc64ac8020}</Project>
       <Name>Diese</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Stave\Stave.csproj">
-      <Project>{38A041E6-5AA9-4C22-B96F-35167F171959}</Project>
+    <ProjectReference Include="..\External\Fingear\External\Stave\Stave.csproj">
+      <Project>{38a041e6-5aa9-4c22-b96f-35167f171959}</Project>
       <Name>Stave</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
