--- a/Glyph.Animation/Glyph.Animation.csproj
+++ b/Glyph.Animation/Glyph.Animation.csproj
@@ -34,23 +34,28 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animation.cs" />
     <Compile Include="AnimationBuilder.cs" />
+    <Compile Include="AnimationGraph.cs" />
     <Compile Include="AnimationTransition.cs" />
     <Compile Include="IAnimationBuilder.cs" />
     <Compile Include="NumericAnimationBuilder.cs" />
     <Compile Include="PropertiesAnimationBuilder.cs" />
     <Compile Include="AnimationKeyPoint.cs" />
     <Compile Include="AnimationPlayer.cs" />
-    <Compile Include="Animator.cs" />
     <Compile Include="EasingDelegate.cs" />
     <Compile Include="IAnimation.cs" />
     <Compile Include="IAnimationPlayer.cs" />
     <Compile Include="ITimeOffsetable.cs" />
+    <Compile Include="SpriteAnimationBuilder.cs" />
     <Compile Include="Trajectories\IProgressiveTrajectory.cs" />
     <Compile Include="Trajectories\IStandardTrajectory.cs" />
     <Compile Include="Trajectories\ITimedTrajectory.cs" />
@@ -65,6 +70,22 @@
     <Compile Include="Trajectories\Players\TrajectoryPlayerState.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Collections\Diese.Collections.csproj">
+      <Project>{8e354191-e8e5-498b-9c24-a6765da86417}</Project>
+      <Name>Diese.Collections</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Graph\Diese.Graph.csproj">
+      <Project>{bbc6c938-95a5-4cbf-aa6b-da2a9a09c4f1}</Project>
+      <Name>Diese.Graph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Injection\Diese.Injection.csproj">
+      <Project>{6ADD41DC-F168-43C4-AD4E-F6B8218D8F7C}</Project>
+      <Name>Diese.Injection</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Linseq\Diese.Linseq.csproj">
+      <Project>{F9D2ED94-6FA3-46FB-A50B-83C486F33EEB}</Project>
+      <Name>Diese.Linseq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Modelization\Diese.Modelization.csproj">
       <Project>{0781AD0F-EB0F-442E-9A1C-34C2AA9319FD}</Project>
       <Name>Diese.Modelization</Name>
@@ -89,6 +110,9 @@
       <Project>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</Project>
       <Name>Glyph</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
