--- a/Glyph.Core/Glyph.Core.csproj
+++ b/Glyph.Core/Glyph.Core.csproj
@@ -41,6 +41,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="ColliderManager.cs" />
+    <Compile Include="Colliders\Base\ColliderBase.cs" />
+    <Compile Include="Colliders\Base\ColliderParentImplementation.cs" />
+    <Compile Include="Colliders\Base\ShapeColliderBase.cs" />
+    <Compile Include="Colliders\CircleCollider.cs" />
+    <Compile Include="Colliders\ColliderComposite.cs" />
+    <Compile Include="Colliders\ColliderContainer.cs" />
+    <Compile Include="Colliders\CollisionUtils.cs" />
+    <Compile Include="Colliders\GridCollider.cs" />
+    <Compile Include="Colliders\ICollider.cs" />
+    <Compile Include="Colliders\IGridCollider.cs" />
+    <Compile Include="Colliders\RectangleCollider.cs" />
+    <Compile Include="Collision.cs" />
     <Compile Include="ISceneNode.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="IShapedComponent.cs" />
@@ -66,6 +79,10 @@
     <ProjectReference Include="..\Glyph.Composition\Glyph.Composition.csproj">
       <Project>{8D4F4138-EB36-4427-9A2B-10A50723268C}</Project>
       <Name>Glyph.Composition</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Glyph.Space\Glyph.Space.csproj">
+      <Project>{068202CC-E943-4718-9771-62D72E50623E}</Project>
+      <Name>Glyph.Space</Name>
     </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
