--- a/Glyph.Input/Glyph.Input.csproj
+++ b/Glyph.Input/Glyph.Input.csproj
@@ -39,9 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlLayerBase.cs" />
+    <Compile Include="IInputClient.cs" />
     <Compile Include="StandardControls\EditorControls.cs" />
     <Compile Include="IControlLayer.cs" />
-    <Compile Include="MouseManager.cs" />
     <Compile Include="StandardControls\MenuControls.cs" />
     <Compile Include="Controls\ReferentialCursorControl.cs" />
     <Compile Include="StandardControls\DeveloperControls.cs" />
