--- a/Glyph.WpfInterop/Glyph.WpfInterop.csproj
+++ b/Glyph.WpfInterop/Glyph.WpfInterop.csproj
@@ -42,9 +42,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlyphWpfViewer.cs" />
     <Compile Include="GlyphWpf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WpfInputStates.cs" />
+    <Compile Include="GlyphWpfRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Fingear\Fingear.MonoGame\Fingear.MonoGame.csproj">
