--- a/Glyph.Input/packages.config
+++ b/Glyph.Input/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.3.0" targetFramework="net45" />
 </packages>
