Refactor more Glyph.Composition

--- a/Glyph.Core/Glyph.Core.csproj
+++ b/Glyph.Core/Glyph.Core.csproj
@@ -69,6 +69,12 @@
     <Compile Include="IView.cs" />
     <Compile Include="IShapedComponent.cs" />
     <Compile Include="IWritableSceneNode.cs" />
+    <Compile Include="Layers\ILayer.cs" />
+    <Compile Include="Layers\ILayerManager.cs" />
+    <Compile Include="Layers\ILayerRoot.cs" />
+    <Compile Include="Layers\LayerBase.cs" />
+    <Compile Include="Layers\LayerManager.cs" />
+    <Compile Include="Layers\LayerRoot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlySceneNode.cs" />
     <Compile Include="SceneNode.cs" />
