--- a/Glyph.Tools/packages.config
+++ b/Glyph.Tools/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MonoGame.Framework.WindowsDX" version="3.5.1.1679" targetFramework="net45" />
   <package id="NLog" version="4.4.1" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.3.0" targetFramework="net45" />
 </packages>
