--- a/Glyph.Core/Glyph.Core.csproj
+++ b/Glyph.Core/Glyph.Core.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Scheduler\IGlyphSchedulerController.cs" />
     <Compile Include="Tracking\Factory.cs" />
     <Compile Include="Tracking\FactoryData.cs" />
+    <Compile Include="Tracking\IMessagingCollection.cs" />
     <Compile Include="Tracking\MessagingSpace.cs" />
     <Compile Include="Tracking\MessagingTracker.cs" />
     <Compile Include="ViewManager.cs" />
